Corrected side-toc's embedded list-item's visibility (#701)
* Corrected side-toc's embedded list-item's visibility
* Rebuild {style-new,style}.css

---------

--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -1540,7 +1540,7 @@ footer {
   margin-bottom: .3rem; }
 
 #_side-toc-overall ol > li:not(.active) > ol > * {
-  display: none; }
+  visibility: hidden; }
 
 #_side-toc-overall li > a.has-children {
   padding-right: 1.75rem;
