--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -1794,7 +1794,7 @@ body.disable-language-switcher #_utilitynav #_utilitynav-language {
   margin-bottom: .3rem; }
 
 #_side-toc-overall ol > li:not(.active) > ol > * {
-  display: none; }
+  visibility: hidden; }
 
 #_side-toc-overall li > a.has-children {
   padding-right: 1.75rem;
